--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/finance/academic-finance.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/finance/academic-finance.html
@@ -34,251 +34,8 @@
                        th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ academicFinance.tsbReference?.id +'item]}')} ? 'form-control-error'" />
             </div>
         </fieldset>
-        <fieldset class="academic">
-            <h2 class="heading-medium no-margin">Financial resources</h2>
-            <legend class="visuallyhidden">Financial resources</legend>
-            <p>Please enter the following costs from the summary of resources section on your Je-S form</p>
 
-            <div class="grid-row">
-                <div class="column-third"><strong>Directly incurred</strong></div>
-                <div class="column-two-thirds"><strong>TSB Contribution (please refer to the TSB contribution column)</strong></div>
-            </div>
-            <hr class="underline"/>
-
-            <div class="grid-row">
-                <div class="form-group"
-                    th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ academicFinance.incurredStaff?.id +'-cost]}')} ? 'form-group-error'">
-                    <label class="form-label column-third" for="incurred-staff">
-                        <span>Staff</span>
-                        <th:block th:insert="question-type/form-elements :: form-validation-messages (id=${'cost-'+academicFinance.incurredStaff?.id+'-cost'})" />
-                    </label>
-                    <div class="column-two-thirds">
-                        <input type="text"
-                               class="form-control width-full"
-                               id="incurred-staff"
-                               th:name="cost- + ${academicFinance.incurredStaff?.id} + -incurred_staff"
-                               ifs:nonZeroValue="${academicFinance.incurredStaff?.numberValue}"
-                               placeholder="0"
-                               th:readonly="${readonly}"
-                              th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ academicFinance.incurredStaff?.id +'-cost]}')}? 'form-control-error'" />
-                    </div>
-                </div>
-            </div>
-            <div class="grid-row">
-                <div class="form-group" th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ academicFinance.incurredTravelAndSubsistence?.id +'-cost]}')} ? 'form-group-error'">
-
-                    <label class="form-label column-third" for="travel">
-                        <span>Travel &amp; subsistence </span>
-                        <th:block th:insert="question-type/form-elements :: form-validation-messages (id=${'cost-'+ academicFinance.incurredTravelAndSubsistence?.id+'-cost'})" />
-                    </label>
-                    <div class="column-two-thirds">
-                        <input class="form-control width-full"
-                               id="travel"
-                               th:name="cost- + ${academicFinance.incurredTravelAndSubsistence?.id} + -incurred_travel_subsistence"
-                               type="text"
-                               ifs:nonZeroValue="${academicFinance.incurredTravelAndSubsistence?.numberValue}"
-                               placeholder="0"
-                               th:readonly="${readonly}"
-                               th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ academicFinance.incurredTravelAndSubsistence?.id +'-cost]}')}? 'form-control-error'"/>
-                    </div>
-                </div>
-            </div>
-            <div class="grid-row">
-                <div class="form-group"  th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ academicFinance.incurredOtherCosts?.id +'-cost]}')} ? 'form-group-error'">
-                    <label class="form-label column-third" for="other">
-                        <span>Other costs</span>
-                        <th:block th:insert="question-type/form-elements :: form-validation-messages (id=${'cost-'+academicFinance.incurredOtherCosts?.id+'-cost'})" />
-                    </label>
-                    <div class="column-two-thirds">
-                        <input class="form-control width-full"
-                               id="other"
-                               th:name="cost- + ${academicFinance.incurredOtherCosts?.id} + -incurred_other_costs"
-                               type="text"
-                               ifs:nonZeroValue="${academicFinance.incurredOtherCosts?.numberValue}"
-                               placeholder="0"
-                               th:readonly="${readonly}"
-                               th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ academicFinance.incurredOtherCosts?.id +'-cost]}')}? 'form-control-error'" />
-                    </div>
-                </div>
-            </div>
-            <div class="grid-row">
-                <div class="form-group">
-                    <label class="form-label column-third" for="subtotal-resources">
-                        <span class="form-label-bold">Subtotal</span>
-                    </label>
-                    <div class="column-two-thirds">
-                        <input class="form-control width-full" id="subtotal-resources" data-calculation-fields="#incurred-staff,#travel,#other"
-                               data-calculation-operations="+" type="text" readonly="readonly"
-                               th:value="'£' + ${#numbers.formatInteger(academicFinance.getTotalIncurred(),0, 'DEFAULT')}"/>
-                    </div>
-                </div>
-            </div>
-        </fieldset>
-
-
-        <fieldset>
-
-            <legend class="visuallyhidden">Directly allocated</legend>
-            <strong>Directly allocated</strong>
-            <hr class="underline"/>
-
-
-            <div class="grid-row">
-                <div class="form-group" th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ academicFinance.allocatedInvestigators?.id +'-cost]}')} ? 'form-group-error'">
-                    <label class="form-label column-third" for="investigators">
-                        <span>Investigators</span>
-                        <th:block th:insert="question-type/form-elements :: form-validation-messages (id=${'cost-'+academicFinance.allocatedInvestigators?.id+'-cost'})" />
-                    </label>
-                    <div class="column-two-thirds">
-                        <input class="form-control width-full"
-                               id="investigators"
-                               th:name="cost- + ${academicFinance.allocatedInvestigators?.id} + -allocated_investigators" type="text"
-                               ifs:nonZeroValue="${academicFinance.allocatedInvestigators?.numberValue}"
-                               placeholder="0"
-                               th:readonly="${readonly}"
-                               th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ academicFinance.allocatedInvestigators?.id +'-cost]}')}? 'form-control-error'"/>
-                    </div>
-                </div>
-            </div>
-            <div class="grid-row">
-                <div class="form-group" th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ academicFinance.allocatedEstatesCosts?.id +'-cost]}')} ? 'form-group-error'">
-                    <label class="form-label column-third" for="estates">
-                        <span>Estates Costs</span>
-                        <th:block th:insert="question-type/form-elements :: form-validation-messages (id=${'cost-'+academicFinance.allocatedEstatesCosts?.id+'-cost'})" />
-                    </label>
-                    <div class="column-two-thirds">
-                        <input class="form-control width-full"
-                               id="estates"
-                               th:name="cost- + ${academicFinance.allocatedEstatesCosts?.id} + -allocated_estates_costs" type="text"
-                               ifs:nonZeroValue="${academicFinance.allocatedEstatesCosts?.numberValue}"
-                               placeholder="0"
-                               th:readonly="${readonly}"
-                               th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ academicFinance.allocatedEstatesCosts?.id +'-cost]}')}? 'form-control-error'"/>
-                    </div>
-                </div>
-            </div>
-            <div class="grid-row">
-                <div class="form-group" th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ academicFinance.allocatedOtherCosts?.id +'-cost]}')}? 'form-group-error'">
-                    <label class="form-label column-third" for="other-direct">
-                        <span>Other costs</span>
-                        <th:block th:insert="question-type/form-elements :: form-validation-messages (id=${'cost-'+academicFinance.allocatedOtherCosts?.id+'-cost'})" />
-                    </label>
-                    <div class="column-two-thirds">
-                        <input class="form-control width-full"
-                               id="other-direct"
-                               th:name="cost- + ${academicFinance.allocatedOtherCosts?.id} + -allocated_other_costs" type="text"
-                               ifs:nonZeroValue="${academicFinance.allocatedOtherCosts?.numberValue}"
-                               placeholder="0"
-                               th:readonly="${readonly}"
-                               th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ academicFinance.allocatedOtherCosts?.id +'-cost]}')}? 'form-control-error'"/>
-                    </div>
-                </div>
-            </div>
-            <div class="grid-row">
-                <div class="form-group">
-                    <label class="form-label column-third" for="subtotal-directly-allocated">
-                        <span class="form-label-bold">Subtotal</span>
-                    </label>
-                    <div class="column-two-thirds">
-                        <input class="form-control width-full" data-calculation-fields="#investigators,#estates,#other-direct" data-calculation-operations="+"
-                               readonly="readonly" id="subtotal-directly-allocated"
-                               th:value="'£' + ${#numbers.formatInteger(academicFinance.getTotalAllocated(),0, 'DEFAULT')}"/>
-                    </div>
-                </div>
-            </div>
-        </fieldset>
-        <hr class="underline"/>
-
-        <fieldset>
-            <legend class="visuallyhidden">Indirect costs</legend>
-            <div class="grid-row">
-                <div class="form-group border-top"  th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ academicFinance.indirectCosts?.id +'-cost]}')} ? 'form-group-error'">
-                    <label class="form-label column-third" for="indirect">
-                        <span class="form-label-bold">Indirect costs </span>
-                        <th:block th:insert="question-type/form-elements :: form-validation-messages (id=${'cost-'+academicFinance.indirectCosts?.id+'-cost'})" />
-                    </label>
-                    <div class="column-two-thirds">
-                        <input class="form-control width-full"
-                               id="indirect"
-                               th:name="cost- + ${academicFinance.indirectCosts?.id} + -indirect_costs"
-                               type="text"
-                               ifs:nonZeroValue="${academicFinance.indirectCosts?.numberValue}"
-                               placeholder="0"
-                               th:readonly="${readonly}"
-                               th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ academicFinance.indirectCosts?.id +'-cost]}')}? 'form-control-error'" />
-                    </div>
-                </div>
-            </div>
-        </fieldset>
-
-        <fieldset>
-            <legend class="visuallyhidden">Exceptions</legend>
-
-            <strong>Exceptions</strong>
-            <hr class="underline"/>
-
-            <div class="grid-row">
-                <div class="form-group"  th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ academicFinance.exceptionsStaff?.id +'-cost]}')} ? 'form-group-error'">
-                    <label class="form-label column-third" for="exceptions-staff">
-                        <span>Staff</span>
-                        <th:block th:insert="question-type/form-elements :: form-validation-messages (id=${'cost-'+academicFinance.exceptionsStaff?.id+'-cost'})" />
-                    </label>
-                    <div class="column-two-thirds">
-                        <input class="form-control width-full"
-                               id="exceptions-staff"
-                               th:name="cost- + ${academicFinance.exceptionsStaff?.id} + -exceptions_staff" type="text"
-                               ifs:nonZeroValue="${academicFinance.exceptionsStaff?.numberValue}"
-                               placeholder="0"
-                               th:readonly="${readonly}"
-                               th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ academicFinance.exceptionsStaff?.id +'-cost]}')}? 'form-control-error'" />
-                    </div>
-                </div>
-            </div>
-            <div class="grid-row">
-                <div class="form-group" th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ academicFinance.exceptionsOtherCosts?.id +'-cost]}')} ? 'form-group-error'">
-                    <label class="form-label column-third" for="exceptions-other-direct">
-                        <span>Other costs</span>
-                        <th:block th:insert="question-type/form-elements :: form-validation-messages (id=${'cost-'+academicFinance.exceptionsOtherCosts?.id+'-cost'})" />
-                    </label>
-                    <div class="column-two-thirds">
-                        <input class="form-control width-full"
-                               id="exceptions-other-direct"
-                               th:name="cost- + ${academicFinance.exceptionsOtherCosts?.id} + -exceptions_other_costs"
-                               type="text"
-                               ifs:nonZeroValue="${academicFinance.exceptionsOtherCosts?.numberValue}"
-                               placeholder="0"
-                               th:readonly="${readonly}"
-                               th:classappend="${#fields.hasErrors('${form.formInput[cost-'+ academicFinance.exceptionsOtherCosts?.id +'-cost]}')}? 'form-control-error'" />
-                    </div>
-                </div>
-            </div>
-            <div class="grid-row">
-                <div class="form-group">
-                    <label class="form-label column-third" for="subtotal-exceptions">
-                        <span class="form-label-bold">Subtotal</span>
-                    </label>
-                    <div class="column-two-thirds">
-                        <input id="subtotal-exceptions" class="form-control width-full" data-calculation-fields="#exceptions-staff,#exceptions-other-direct"
-                               data-calculation-operations="+" readonly="readonly"
-                               th:value="'£' + ${#numbers.formatInteger(academicFinance.getTotalExceptions(),0, 'DEFAULT')}"/>
-                    </div>
-                </div>
-            </div>
-            <div class="grid-row">
-                <div class="form-group totals">
-                    <label class="form-label column-third" for="total">
-                        <span class="form-label-bold">Total</span>
-                    </label>
-                    <div class="column-two-thirds">
-                        <input class="form-control width-full"
-                               data-calculation-fields="#subtotal-resources,#indirect,#subtotal-directly-allocated,#subtotal-exceptions"
-                               data-calculation-operations="+" id="total" readonly="readonly"
-                               th:value="'£' + ${#numbers.formatInteger(academicFinance.getTotal(),0, 'DEFAULT')}"/>
-                    </div>
-                </div>
-            </div>
-        </fieldset>
-
+        <th:block th:insert="finance/academic-finance :: finance_fields (${model, applicant='true'})"/>
         <th:block th:insert="finance/academic-finance :: finance_upload (${model},${model.financeUploadQuestion},${model.financeUploadFormInput},${readonly})" />
 
         <div th:insert="fragments/elements :: application-agree-to-terms (${model.competition.id})"
@@ -290,10 +47,17 @@
 
 <th:block th:fragment="assessment_detailed_finance (model)" th:with="question=${detailedCostings.applicantQuestion.question}, userOrganisation=${detailedCostings.currentApplicant.organisation}, readonly=${detailedCostings.allReadOnly or detailedCostings.complete}">
 
+    <th:block th:insert="finance/academic-finance :: finance_fields (${detailedCostings}, applicant='false')"/>
+
+    <th:block th:insert="finance/academic-finance :: finance_upload (${detailedCostings},${detailedCostings.financeUploadQuestion},${detailedCostings.financeUploadFormInput},${readonly})" />
+
+</th:block>
+
+<th:block th:fragment="finance_fields (model, applicant)">
     <fieldset class="academic">
-        <h2 class="heading-medium">Financial resources</h2>
+        <h2 class="heading-medium" th:appendclass="${applicant == 'true' ? 'no-margin' : ''}">Financial resources</h2>
         <legend class="visuallyhidden">Financial resources</legend>
-        <p>The following costs are entered by the organisation from the summary of resources section on your Je-S form</p>
+        <p>The following costs are entered by the organisation from the summary of resources section on the Je-S form</p>
 
         <div class="grid-row">
             <div class="column-third"><strong>Directly incurred</strong></div>
@@ -533,11 +297,7 @@
         </div>
     </fieldset>
 
-    <th:block th:insert="finance/academic-finance :: finance_upload (${detailedCostings},${detailedCostings.financeUploadQuestion},${detailedCostings.financeUploadFormInput},${readonly})" />
-
 </th:block>
-
-
 
 <!-- ===========================Form: Fileupload =========================== -->
 <th:block th:fragment="finance_upload (model, question, formInput, readonly)"
