--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/finance/finance.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/finance/finance.html
@@ -276,9 +276,6 @@
                     <th:block th:if="${costViewModel.formInput.type.displayableFinanceType}">
                         <th:block th:insert="finance/finance :: ${costViewModel.formInput.type.nameLower} (${costViewModel})" ></th:block>
                     </th:block>
-                    <th:block th:if="${costViewModel.formInput.type.displayableQuestionType}">
-                        <th:block th:insert="question-type/types :: ${costViewModel.formInput.type.nameLower} (${costViewModel})" ></th:block>
-                    </th:block>
                 </th:block>
             </div>
         </section>
@@ -301,7 +298,7 @@
 
     <!-- ===========================Form: labour =========================== -->
     <th:block th:fragment="labour (costViewModel)">
-        <p th:text="${costViewModel.question.description}"></p>
+        <p th:unless="${costViewModel.viewmode == 'readonly'}" th:text="${costViewModel.question.description}"></p>
         <th:block th:insert="finance/finance :: labour_finances" th:with="question=${costViewModel.question}, costCategory=${costViewModel.costCategory}, viewmode=${costViewModel.viewmode}, subSection=${costViewModel.section}" />
     </th:block>
 
@@ -740,10 +737,9 @@
         </th:block>
     </th:block>
 
-
     <!-- ===========================Form: materials =========================== -->
     <th:block th:fragment="materials (costViewModel)" th:with="question=${costViewModel.question}">
-        <p th:text="${question.description}">description</p>
+        <p th:unless="${costViewModel.viewmode == 'readonly'}" th:text="${question.description}">description</p>
         <th:block th:insert="finance/finance :: materials_finances" th:with="costCategory=${costViewModel.costCategory}, viewmode=${costViewModel.viewmode}, subSection=${costViewModel.section}" />
     </th:block>
 
@@ -903,7 +899,7 @@
     <!-- ===========================Form: capital usage =========================== -->
 
     <th:block th:fragment="capital_usage (costViewModel)" >
-        <p th:text="${costViewModel.question.description}"></p>
+        <p th:unless="${costViewModel.viewmode == 'readonly'}" th:text="${costViewModel.question.description}"></p>
         <th:block th:insert="finance/finance :: capital_usage_finances" th:with="question=${costViewModel.question},costCategory=${costViewModel.costCategory}, viewmode=${costViewModel.viewmode}, subSection=${costViewModel.section}" />
     </th:block>
 
@@ -1120,7 +1116,7 @@
 
     <!-- ===========================Form: subcontracting cost =========================== -->
     <th:block th:fragment="subcontracting (costViewModel)">
-        <p th:text="${costViewModel.question.description}"></p>
+        <p th:unless="${costViewModel.viewmode == 'readonly'}" th:text="${costViewModel.question.description}"></p>
         <th:block th:insert="finance/finance :: subcontracting_finances" th:with="question=${costViewModel.question},costCategory=${costViewModel.costCategory}, viewmode=${costViewModel.viewmode}, subSection=${costViewModel.section}" />
     </th:block>
 
@@ -1253,7 +1249,7 @@
     <!-- ===========================Form: travel cost =========================== -->
 
     <th:block th:fragment="travel (costViewModel)">
-        <p th:text="${costViewModel.question.description}"></p>
+        <p th:unless="${costViewModel.viewmode == 'readonly'}" th:text="${costViewModel.question.description}"></p>
         <th:block th:insert="finance/finance :: travel_finances" th:with="question=${costViewModel.question},costCategory=${costViewModel.costCategory}, viewmode=${costViewModel.viewmode}, subSection=${costViewModel.section}" />
     </th:block>
 
@@ -1414,7 +1410,7 @@
 
     <!-- ===========================Form: other cost =========================== -->
     <th:block th:fragment="other_costs (costViewModel)">
-        <p th:text="${costViewModel.question.description}" />
+        <p th:unless="${costViewModel.viewmode == 'readonly'}" th:text="${costViewModel.question.description}" />
         <th:block th:insert="finance/finance :: other_costs_finances" th:with="question=${costViewModel.question},costCategory=${costViewModel.costCategory}, viewmode=${costViewModel.viewmode}, subSection=${costViewModel.section}" />
     </th:block>
 
